[gd_scene load_steps=10 format=3 uid="uid://b8ls5tnhfvtkc"]

[ext_resource type="Script" uid="uid://cw7wyag1thfco" path="res://Assets/Scripts/Settings_Door.gd" id="1_oulyn"]
[ext_resource type="Texture2D" uid="uid://dmode7n8bpsqd" path="res://Arta/Tiles/Transparent/tile_0057.png" id="2_qa6y4"]
[ext_resource type="Texture2D" uid="uid://xpuvcdoqdsce" path="res://Arta/Tilemap/monochrome_tilemap_transparent_packed.png" id="3_i08i7"]
[ext_resource type="Texture2D" uid="uid://bi55n7oupfool" path="res://Arta/Tiles/Transparent/tile_0058.png" id="4_f46rc"]
[ext_resource type="Texture2D" uid="uid://875qdx0yhc6n" path="res://Arta/Info Board/Panel.png" id="5_pakj1"]
[ext_resource type="Theme" uid="uid://beoh5k5sb22ui" path="res://Arta/Theme.tres" id="6_5ysvy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i0g0b"]
atlas = ExtResource("3_i08i7")
region = Rect2(256, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_3u6p4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_qa6y4")
}],
"loop": true,
"name": &"closed_key",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0g0b")
}],
"loop": true,
"name": &"closed_no_key",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_f46rc")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_di1g3"]
size = Vector2(16, 16)

[node name="Settings Door" type="Area2D"]
script = ExtResource("1_oulyn")

[node name="DoorSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_3u6p4")
animation = &"closed_no_key"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_di1g3")

[node name="PopUp" type="CanvasLayer" parent="."]
visible = false

[node name="Panel" type="TextureRect" parent="PopUp"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
texture = ExtResource("5_pakj1")
stretch_mode = 5

[node name="Save Button" type="Button" parent="PopUp"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.5
offset_top = -134.0
offset_right = 53.5
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("6_5ysvy")
theme_override_font_sizes/font_size = 31
text = "Save
"
flat = true

[node name="BoxContainer" type="BoxContainer" parent="PopUp"]
anchors_preset = -1
anchor_left = 0.145833
anchor_top = 0.185185
anchor_right = 0.854167
anchor_bottom = 0.765432
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="PopUp/BoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 2

[node name="Music" type="Label" parent="PopUp/BoxContainer/GridContainer"]
layout_mode = 2
theme = ExtResource("6_5ysvy")
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="Music_Slider" type="HSlider" parent="PopUp/BoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 1.0
step = 0.01

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="pressed" from="PopUp/Save Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="PopUp/BoxContainer/GridContainer/Music_Slider" to="." method="_on_music_slider_value_changed"]
